
Since 7.x-1.1-rc1
Issue #785194 by arcovia: Access to tab form.
Issue #785194 by NancyDru: Better access to tab form.
Issue #1691870 by NancyDru: Rules record workflow comment.
Issue #1691870 by NancyDru: Transition check wrong choices on Force.
Issue #1951164 by Kristen Pol: Fix left join order.
Issue #1951718 by NancyDru: Clean up history records.
Issue #1953642 by NancyDru: Add history row alter feature.
Issue #1953642 by NancyDru: Add state revert feature.
Issue #1953642 by NancyDru: Document hook_workflow_history_alter().
Issue #1484126 by NancyDru, nathangervais: Check if node type has a workflow before adding WF info.
Issue #1957074 by andypost: Allow Views to show Sid value.
Address some @TODO items.

Since 7.x-1.1
Issue #1961156 by mErilainen: Missing translate in Views.
Issue #1962344 by NancyDru, manu77: Missing $node->workflow.
Issue #1962512 by NancyDru: Don't let (creation) be changed.
Issue #1961426 by andypost: Fix reference error.
Issue #1893420 by JackVVo: Fix node name.
Issue #1966292 by aBrookland: Undefined index.
Issue #1970538 by Tim Asplin: Improve Features support.
Issue #1589254 by DuaelFr: Improve Features support.
Issue #1972728 by NancyDru: Deal with HTML entities and translations.
Issue #1967794 by NancyDru, dforegger: Remove static cache.
Issue #1966804 by andypost: Improve workflow_get_workflow_node_history_by_nid.
Issue #1970846 by NancyDru: Allow multiple workflow_tab_forms on the same page.
Issue #1974828 by martysteer: Fix missing brackets in query.
Replace all SELECT * with column names. (Remove @TODO)
Issue #1976992 by bdone, NancyDru: Make watchdog logging optional.
Issue #1976942 by dforegger: Fix transition import.
Issue #1984338 by NancyDru: Fix node_load looping.
Issue #1995004 by NancyDru: Fix form issue in admin.
Issue #1975058 by NancyDru: Revert change to node_form on comments.
Issue #1986220 by NancyDru: Add scheduling user's id to history.
Automatically give "Participate in Workflow" permission to new roles.