@@ -124,3 +124,4 @@ Issue #1995004 by NancyDru: Fix form issue in admin.
 Issue #1975058 by NancyDru: Revert change to node_form on comments.
 Issue #1986220 by NancyDru: Add scheduling user's id to history.
 Automatically give "Participate in Workflow" permission to new roles.
+Issue #1984338 by NancyDru: Pass $force to hook_workflow().
